--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,7 @@
 	path = .registry
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
+	branch = HEAD
 [submodule "animation"]
 	path = animation
 	url = https://github.com/yihui/animation
